remove server status

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
       <div class="nav-grid">
         <div id="nav-area">
           <a href="#" onclick="showNew()">Add</a> | <a href="#" onclick="showMessages()">View/Edit</a> | <a href="/logout">Logout</a> | &nbsp; &nbsp;<div
-            id="serv-conn" href="#">Please wait...</div> &nbsp; &nbsp; <div><i class="icon bullhorn"></i> <%= motd %></div><span style="visibility:hidden;" id="username"><%= name %></span>
+            id="serv-conn" href="#" style="visibility: hidden;">Please wait...</div> &nbsp; &nbsp; <div><i class="icon bullhorn"></i> <%= motd %></div><span style="visibility:hidden;" id="username"><%= name %></span>
         </div>
       </div>
       <div class="policy-grid">
